libs/@local/hashql/hir/tests/ui/lower/checking/call-invalid.jsonc
//@ run: fail
//@ description: Call a function
["+", { "#literal": 42.12 }, { "#literal": "42" }]
//~^ ERROR must be a subtype of the upper bound
